samples/_failures_safe/1761516154_e22b1d_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_0dbcb69c.c: In function ‘parser_init’:
./samples/SAFE/__tmp_0dbcb69c.c:154:11: error: ‘struct Parser’ has no member named ‘has’
  154 |     parser->has
      |           ^~
./samples/SAFE/__tmp_0dbcb69c.c:154:16: error: expected ‘;’ at end of input
  154 |     parser->has
      |                ^
      |                ;
./samples/SAFE/__tmp_0dbcb69c.c:154:5: error: expected declaration or statement at end of input
  154 |     parser->has
      |     ^~~~~~
